# atcoder-review-fetcher

./: .gitignore  HANDOFF.md  README.md  config.example.toml  pyproject.toml
src/atcoder_review_fetcher/: __init__.py  archive.py  cli.py  config.py  editorial.py  gitops.py  http.py  markdown.py  statement.py  writer.py
tests/: conftest.py  test_archive.py  test_editorial.py  test_statement.py  test_writer.py
tests/fixtures/: archive.html  editorial_abc407_c.html  editorial_index_abc407.html  task_abc407_c.html  tasks_abc450.html
